--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "brenoroosevelt/league-route-attribute-gi",
+    "description": "League Route Attributes",
     "type": "library",
     "license": "MIT",
     "keywords": [
@@ -16,16 +17,15 @@
         }
     ],
     "require": {
-        "php": "^8.0",
-        "jerowork/route-attribute-provider": "^0.3",
-        "league/route": "^5.1",
-        "psr/container": "^1.0",
-        "psr/simple-cache": "^1.0"
+        "php": "^8",
+        "jerowork/route-attribute-provider": "^0",
+        "league/route": "^5"
     },
     "require-dev": {
         "phpunit/phpunit": "^9",
         "squizlabs/php_codesniffer": "3.5.*",
-        "phpstan/phpstan": "^0"
+        "phpstan/phpstan": "^0",
+        "brenoroosevelt/habemus": "^1"
     },
     "provide": {
         "jerowork/route-attribute-provider-implementation": "^0"
